--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,9 +5,7 @@
     font-family: 'Gabarito', sans-serif;
 }
 
-body {
-    margin: 30px;
-}
+
 
 header {
     background-color: #FFEBC9;
@@ -16,81 +14,44 @@ header {
 
 .logo {
     height: 125px;
-    width: 150px;
+    width: auto;
 }
 
-.nav {
+.navbar {
+    overflow: hidden;
     background-color: #5C3D2E;
 }
 
-.nav ul {
-    list-style: none;
-    text-align: center;
-}
-
-.nav li {
-    display: inline-block;
-    /* Muestra los elementos en línea horizontalmente */
+.navbar li {
     margin-right: 20px;
     /* Espacio entre elementos de la lista */
 }
 
-/* Estilo para los enlaces */
-.nav a {
-    text-decoration: none;
-    color: #FFEBC9;
-    font-size: 30px;
-    border-radius: 14px 14px 14px 14px;
-
+.nav-link:hover {
+    text-decoration: underline;
+    color: null !important
 }
 
-.seleccion {
+/* Estilo para los enlaces */
+.navbar .nav-item .nav-link {
+
+    color: #FFEBC9;
+    border-radius: 14px 14px 14px 14px;
+}
+
+.active {
     background-color: #B85C38;
 }
 
-.banner {
-    margin-bottom: 30px;
-    font-size: 40px;
-    color: #2D2424;
-    text-align: center;
-    text-shadow: 4px 4px 0px rgba(255, 255, 255, 0.781);
-    padding-top: 72px;
-    height: 550px;
-    background-image: url("../assets/img/banner.jpeg");
-    background-position-y: -356px;
-    background-position-x: 0px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0px 11px 10px 0px rgba(0, 0, 0, 0.75);
-    border-radius: 0px 0px 50px 51px;
+.imagen {
+    height: auto;
+    width: 100vh;
 }
 
-.banner div {
-    background-color: #adadad5d;
-    box-shadow: 0px 9px 104px -24px rgba(0, 0, 0, 0.5) inset;
-}
 
-.texto {
-    display: inline-block;
-}
 
-.texto h1 {
-    text-align: center;
-    font-size: 40px;
-}
 
-.texto p {
-    text-align: justify;
-    margin-top: 20px;
-    line-height: 25px;
-    font-size: 20px;
-}
 
-.texto img {
-    margin: 20px;
-    width: 500px;
-    border-radius: 14px 14px 14px 14px;
-}
 
 footer {
     padding: 10px;
@@ -101,14 +62,17 @@ footer {
 
 .logofoot {
     height: 125px;
-    width: 150px;
+    width: auto;
 }
 
 .iconos {
+
     margin-top: 10px;
 }
 
 .iconos a {
+
+    text-decoration-line: none;
     color: #FFEBC9;
     padding: 10px;
     font-size: 50px;
