optimizacion de imagenes + uso de Maps

--- a/scss/_acerca.scss
+++ b/scss/_acerca.scss
@@ -1,8 +1,10 @@
 @import 'variables';
 @import 'mixins';
+
 .btn-color {
-    @include boton($primary-color,$tertiary-color);
+    @include boton(map-get($colores, primario), map-get($colores, terciario));
 }
+
 .btn-alt {
-    @include boton($secondary-color,$primary-color);
+    @include boton(map-get($colores, secundario), map-get($colores, primario));
 }
