--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,20 +48,16 @@ header a:hover {
   width: auto;
 }
 
-nav {
-  border-radius: 0px 0px 14px 14px;
-}
-nav.navbar {
+.navbar {
   background-color: #5C3D2E;
+  border-radius: 0px 0px 14px 14px;
 }
 
 .navbar li {
   margin-left: 10px;
   margin-right: 10px;
-  /* Espacio entre elementos de la lista */
 }
 
-/* Estilo para los enlaces */
 .navbar .nav-item .nav-link {
   color: #FFEBC9;
   border-radius: 14px 14px 14px 14px;
