--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,25 +1,31 @@
 @import 'variables';
+
 footer {
   padding: 10px;
-  color: $primary-color;
-  background-color: $secondary-color;
+  color: map-get($colores, primario);
+  background-color: map-get($colores, secundario);
   border-radius: 14px 14px 14px 14px;
 }
+
 .logofoot {
   filter: brightness(0) invert(1) sepia(1) hue-rotate(30deg);
 }
+
 .iconos {
   margin-top: 10px;
 }
+
 .iconos a {
   text-decoration-line: none;
-  color: $primary-color;
+  color: map-get($colores, primario);
   padding: 10px;
   font-size: 50px;
 }
+
 .iconos a:hover {
-  color: $tertiary-color;
+  color: map-get($colores, terciario);
 }
+
 .bordes {
   border-radius: 14px 14px 14px 14px;
 }
