--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,15 +1,19 @@
 @import 'variables';
+
 header {
-    background-color: $primary-color;
+    background-color: map-get($colores, primario);
     border-radius: 14px 14px 0px 0px;
 }
+
 header a {
     text-decoration: none;
-    color: $black;
+    color: map-get($colores, negro);
 }
+
 header a:hover {
-    color: $black;
+    color: map-get($colores, negro);
 }
+
 .logo {
     height: 125px;
     width: auto;
