--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,7 +6,7 @@
   border: none;
 
   &:hover {
-    background-color: $secondary-color;
-    color: $primary-color;
+    background-color: map-get($colores, secundario);
+    color: map-get($colores, primario);
   }
 }
