--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .navbar {
-  background-color: $secondary-color;
+  background-color: map-get($colores, secundario);
   border-radius: 0px 0px 14px 14px;
 }
 
@@ -11,19 +11,19 @@
 }
 
 .navbar .nav-item .nav-link {
-  color: $primary-color;
+  color: map-get($colores, primario);
   border-radius: 14px 14px 14px 14px;
 }
 
 .active {
-  background-color: $tertiary-color;
+  background-color: map-get($colores, terciario);
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
   text-decoration: underline;
-  color: $tertiary-color;
+  color: map-get($colores, terciario);
 }
 
 #activo {
-  color: $black;
+  color: map-get($colores, negro);
 }
