--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
   font-family: 'Gabarito', sans-serif;
 }
+
 .card-img {
   border-radius: 14px 14px 14px 14px;
+}
+
+.animaciones {
+  overflow: hidden;
 }
