--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -15,8 +15,15 @@
 
 .card-michi {
   width: 25rem;
+  background-color: rgba(255, 255, 255, 0.548);
+  border-radius: 14px 14px 14px 14px;
 }
 
 body {
   background-image: url(../assets/img/fondo.webp);
+}
+
+a {
+  text-decoration: none;
+  color: map-get($colores, terciario);
 }
