--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,8 +9,8 @@
 }
 
 .btn-alt {
-  background-color: #FFEBC9;
-  color: #5C3D2E;
+  background-color: #8a5845;
+  color: #FFEBC9;
   border: none;
 }
 .btn-alt:hover {
