--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,4 +2,5 @@ $colores: (
     "primario": #FFEBC9,
     "secundario": #5C3D2E,
     "terciario": #B85C38,
+    "cuaternario":#8a5845,
     "negro": black)
