--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,6 +41,8 @@
 
 body {
   background-image: url(../assets/img/fondo.webp);
+  background-size: 300px 300px;
+  min-height: 100vh;
 }
 
 a {
@@ -102,7 +104,7 @@ footer {
   padding: 10px;
   color: #FFEBC9;
   background-color: #5C3D2E;
-  border-radius: 14px 14px 14px 14px;
+  border-radius: 14px 14px 0px 0px;
 }
 
 .logofoot {
