--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,15 @@
+.img-container {
+  overflow: hidden;
+  border-radius: 14px 14px 14px 14px;
+}
+.img-container:hover .imgGal {
+  transition: transform 1s;
+  transform: scale(1.3);
+}
+.img-container .imgGal {
+  width: 100%;
+}
+
 .btn-color {
   background-color: #B85C38;
   color: #FFEBC9;
@@ -18,6 +30,10 @@
   color: #FFEBC9;
 }
 
+.bordes {
+  border-radius: 14px 14px 14px 14px;
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -35,7 +51,7 @@
 
 .card-michi {
   width: 25rem;
-  background-color: rgba(255, 255, 255, 0.548);
+  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 14px 14px 14px 14px;
 }
 
@@ -46,7 +62,18 @@ body {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: underline;
+  color: #B85C38;
+}
+a:hover {
+  color: #8a5845;
+}
+
+p {
+  font-size: large;
+}
+
+.texto-terciario {
   color: #B85C38;
 }
 
@@ -106,28 +133,30 @@ footer {
   background-color: #5C3D2E;
   border-radius: 14px 14px 0px 0px;
 }
-
-.logofoot {
-  filter: brightness(0) invert(1) sepia(1) hue-rotate(30deg);
-}
-
-.iconos {
-  margin-top: 10px;
-}
-
-.iconos a {
+footer a {
   text-decoration-line: none;
   color: #FFEBC9;
-  padding: 10px;
-  font-size: 50px;
 }
-
-.iconos a:hover {
+footer a:hover {
   color: #B85C38;
 }
 
-.bordes {
-  border-radius: 14px 14px 14px 14px;
+.logofoot {
+  filter: brightness(0) invert(1) sepia(1) hue-rotate(30deg);
+  margin-inline: auto;
+}
+
+.iconos {
+  padding-top: 40px;
+}
+.iconos a {
+  padding: 10px;
+  font-size: 50px;
+}
+@media (max-width: 991px) {
+  .iconos {
+    padding-top: 0;
+  }
 }
 
 svg#freepik_stories-playful-cat:not(.animated) .animable {
