--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,8 +1,9 @@
 @import 'variables';
-@import 'acerca';
+@import 'mixins';
+@import 'galeria';
+@import 'contacto';
 @import 'general';
 @import 'header';
 @import 'navbar';
 @import 'footer';
-@import 'mixins';
 @import '404';
