--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,3 +1,4 @@
+//archivo configuracion de estilos de galeria
 .img-container {
     overflow: hidden; // Oculta cualquier desbordamiento de la imagen
     border-radius: 14px 14px 14px 14px;
