--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,109 +1,112 @@
-                        svg#freepik_stories-playful-cat:not(.animated) .animable {
-                            opacity: 0;
-                        }
+/*archivo de configuracion de estilos de la imagen de freepik
+  el codigo entregado por freepik tenia etiquetas style por lo cual lo traslade a un archivo sass */
 
-                        svg#freepik_stories-playful-cat.animated #freepik--background-complete--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) lightSpeedRight;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat:not(.animated) .animable {
+    opacity: 0;
+}
 
-                        svg#freepik_stories-playful-cat.animated #freepik--Shadow--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) fadeIn;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat.animated #freepik--background-complete--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) lightSpeedRight;
+    animation-delay: 0s;
+}
 
-                        svg#freepik_stories-playful-cat.animated #freepik--Floor--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideLeft;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat.animated #freepik--Shadow--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) fadeIn;
+    animation-delay: 0s;
+}
 
-                        svg#freepik_stories-playful-cat.animated #freepik--Plant--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) fadeIn;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat.animated #freepik--Floor--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideLeft;
+    animation-delay: 0s;
+}
 
-                        svg#freepik_stories-playful-cat.animated #freepik--Cat--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) lightSpeedLeft;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat.animated #freepik--Plant--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) fadeIn;
+    animation-delay: 0s;
+}
 
-                        svg#freepik_stories-playful-cat.animated #freepik--Ball--inject-7 {
-                            animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideRight;
-                            animation-delay: 0s;
-                        }
+svg#freepik_stories-playful-cat.animated #freepik--Cat--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) lightSpeedLeft;
+    animation-delay: 0s;
+}
 
-                        @keyframes lightSpeedRight {
-                            from {
-                                transform: translate3d(50%, 0, 0) skewX(-20deg);
-                                opacity: 0;
-                            }
+svg#freepik_stories-playful-cat.animated #freepik--Ball--inject-7 {
+    animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideRight;
+    animation-delay: 0s;
+}
 
-                            60% {
-                                transform: skewX(10deg);
-                                opacity: 1;
-                            }
+@keyframes lightSpeedRight {
+    from {
+        transform: translate3d(50%, 0, 0) skewX(-20deg);
+        opacity: 0;
+    }
 
-                            80% {
-                                transform: skewX(-2deg);
-                            }
+    60% {
+        transform: skewX(10deg);
+        opacity: 1;
+    }
 
-                            to {
-                                opacity: 1;
-                                transform: translate3d(0, 0, 0);
-                            }
-                        }
+    80% {
+        transform: skewX(-2deg);
+    }
 
-                        @keyframes fadeIn {
-                            0% {
-                                opacity: 0;
-                            }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
 
-                            100% {
-                                opacity: 1;
-                            }
-                        }
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
 
-                        @keyframes slideLeft {
-                            0% {
-                                opacity: 0;
-                                transform: translateX(-30px);
-                            }
+    100% {
+        opacity: 1;
+    }
+}
 
-                            100% {
-                                opacity: 1;
-                                transform: translateX(0);
-                            }
-                        }
+@keyframes slideLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-30px);
+    }
 
-                        @keyframes lightSpeedLeft {
-                            from {
-                                transform: translate3d(-50%, 0, 0) skewX(20deg);
-                                opacity: 0;
-                            }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
 
-                            60% {
-                                transform: skewX(-10deg);
-                                opacity: 1;
-                            }
+@keyframes lightSpeedLeft {
+    from {
+        transform: translate3d(-50%, 0, 0) skewX(20deg);
+        opacity: 0;
+    }
 
-                            80% {
-                                transform: skewX(2deg);
-                            }
+    60% {
+        transform: skewX(-10deg);
+        opacity: 1;
+    }
 
-                            to {
-                                opacity: 1;
-                                transform: translate3d(0, 0, 0);
-                            }
-                        }
+    80% {
+        transform: skewX(2deg);
+    }
 
-                        @keyframes slideRight {
-                            0% {
-                                opacity: 0;
-                                transform: translateX(30px);
-                            }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
 
-                            100% {
-                                opacity: 1;
-                                transform: translateX(0);
-                            }
-                        }
+@keyframes slideRight {
+    0% {
+        opacity: 0;
+        transform: translateX(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
